@@ -1,3 +1,5 @@
+- Get thumbnails working (they were completely broken).
+
 ---------------------------------------------
 1.7.1 (2013-08-21)
 
